# http5/homework/chat-server/docs/swagger.yaml
@@ -26,7 +26,7 @@ info:
   title: Chat API
   version: "1.0"
 paths:
-  /auth:
+  /auth/sign-in:
     post:
       consumes:
       - application/json
@@ -46,7 +46,7 @@ paths:
           schema:
             type: string
         "400":
-          description: Invalid request body
+          description: Authentication error
           schema:
             type: string
         "500":
@@ -54,6 +54,36 @@ paths:
           schema:
             type: string
       summary: Authenticate a user
+      tags:
+      - auth
+  /auth/sign-up:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new user account based on the provided user data
+      parameters:
+      - description: User object for registration
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/request.User'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: User successfully registered
+          schema:
+            type: string
+        "400":
+          description: Create user error
+          schema:
+            type: string
+        "500":
+          description: JSON encoding error
+          schema:
+            type: string
+      summary: Register a new user
       tags:
       - auth
   /messages/private:
@@ -87,15 +117,19 @@ paths:
               $ref: '#/definitions/entities.Message'
             type: array
         "400":
-          description: 'Bad Request: Invalid page number or missing receiver'
+          description: Invalid paginate parameters
           schema:
             type: string
         "401":
           description: 'Unauthorized: Missing or invalid API key'
           schema:
             type: string
+        "404":
+          description: There is no dialog with such a person
+          schema:
+            type: string
         "500":
-          description: 'Bad Request: Get private messages error'
+          description: JSON encoding error
           schema:
             type: string
       security:
@@ -127,7 +161,7 @@ paths:
           schema:
             $ref: '#/definitions/entities.Message'
         "400":
-          description: 'Bad Request: Invalid request body or missing receiver'
+          description: 'Bad Request: Send private message error'
           schema:
             type: string
         "401":
@@ -141,6 +175,34 @@ paths:
       security:
       - BasicAuth: []
       summary: Send a private chat message
+      tags:
+      - messages
+  /messages/private/users:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a list of users who have sent private messages to the
+        authenticated user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of usernames with received private messages
+          schema:
+            items:
+              type: string
+            type: array
+        "401":
+          description: 'Unauthorized: Missing or invalid API key'
+          schema:
+            type: string
+        "500":
+          description: JSON encoding error
+          schema:
+            type: string
+      security:
+      - BasicAuth: []
+      summary: Get users with received private messages
       tags:
       - messages
   /messages/public:
@@ -169,7 +231,7 @@ paths:
               $ref: '#/definitions/entities.Message'
             type: array
         "400":
-          description: 'Bad Request: Invalid page number'
+          description: Invalid paginate parameters
           schema:
             type: string
         "401":
@@ -204,7 +266,7 @@ paths:
           schema:
             $ref: '#/definitions/entities.Message'
         "400":
-          description: 'Bad Request: Invalid request body'
+          description: 'Bad Request: Send public message error'
           schema:
             type: string
         "401":
@@ -220,68 +282,6 @@ paths:
       summary: Send a public chat message
       tags:
       - messages
-  /messages/users:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves a list of users who have sent private messages to the
-        authenticated user
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: List of usernames with received private messages
-          schema:
-            items:
-              type: string
-            type: array
-        "400":
-          description: 'Bad Request: Get users with messages error'
-          schema:
-            type: string
-        "401":
-          description: 'Unauthorized: Missing or invalid API key'
-          schema:
-            type: string
-        "500":
-          description: JSON encoding error
-          schema:
-            type: string
-      security:
-      - BasicAuth: []
-      summary: Get users with received private messages
-      tags:
-      - messages
-  /register:
-    post:
-      consumes:
-      - application/json
-      description: Creates a new user account based on the provided user data
-      parameters:
-      - description: User object for registration
-        in: body
-        name: user
-        required: true
-        schema:
-          $ref: '#/definitions/request.User'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: User successfully registered
-          schema:
-            type: string
-        "400":
-          description: Invalid request body
-          schema:
-            type: string
-        "500":
-          description: JSON encoding error
-          schema:
-            type: string
-      summary: Register a new user
-      tags:
-      - auth
 securityDefinitions:
   BasicAuth:
     type: basic
