# http5/homework/chat-server/internal/api/handlers/auth.go
@@ -9,7 +9,7 @@ import (
 	"github.com/go-chi/chi"
 	"net/http"
 
-	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/api/request"
+	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/api/models/request"
 	"github.com/ew0s/ewos-to-go-hw/http5/homework/chat-server/internal/domain/entities"
 )
 
@@ -36,17 +36,17 @@ func (h *AuthHandler) Routes() chi.Router {
 }
 
 // Registration
-// @Summary		Register a new user
-// @Description	Creates a new user account based on the provided user data
-// @Tags			auth
-// @Accept			json
-// @Produce		json
-// @Param			user	body		request.User	true	"User object for registration"
-// @Success		200		{object}	string			"User successfully registered"
-// @Failure		400		{string}	string			"Invalid request body"
-// @Failure		500		{string}	string			"Create user error"
-// @Failure		500		{string}	string			"JSON encoding error"
-// @Router			/register [post]
+//	@Summary		Register a new user
+//	@Description	Creates a new user account based on the provided user data
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		request.User	true	"User object for registration"
+//	@Success		201		{object}	string			"User successfully registered"
+//	@Failure		400		{string}	string			"Invalid request body"
+//	@Failure		400		{string}	string			"Create user error"
+//	@Failure		500		{string}	string			"JSON encoding error"
+//	@Router			/auth/sign-up [post]
 func (h *AuthHandler) Registration(w http.ResponseWriter, r *http.Request) {
 	var user request.User
 
@@ -72,17 +72,17 @@ func (h *AuthHandler) Registration(w http.ResponseWriter, r *http.Request) {
 }
 
 // Authentication
-// @Summary		Authenticate a user
-// @Description	Authenticates an existing user based on the provided credentials
-// @Tags			auth
-// @Accept			json
-// @Produce		json
-// @Param			user	body		request.User	true	"User object for authentication"
-// @Success		200		{object}	string			"User successfully authenticated"
-// @Failure		400		{string}	string			"Invalid request body"
-// @Failure		500		{string}	string			"Authentication error"
-// @Failure		500		{string}	string			"JSON encoding error"
-// @Router			/auth [post]
+//	@Summary		Authenticate a user
+//	@Description	Authenticates an existing user based on the provided credentials
+//	@Tags			auth
+//	@Accept			json
+//	@Produce		json
+//	@Param			user	body		request.User	true	"User object for authentication"
+//	@Success		200		{object}	string			"User successfully authenticated"
+//	@Failure		400		{string}	string			"Invalid request body"
+//	@Failure		400		{string}	string			"Authentication error"
+//	@Failure		500		{string}	string			"JSON encoding error"
+//	@Router			/auth/sign-in [post]
 func (h *AuthHandler) Authentication(w http.ResponseWriter, r *http.Request) {
 	var user request.User
 
@@ -101,7 +101,7 @@ func (h *AuthHandler) Authentication(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if existingUser.Password != response.Password {
-		baseresponse.RenderErr(w, r, fmt.Errorf("%w: %s", constants.ErrBadRequest, constants.ErrIncorrectPassword))
+		baseresponse.RenderErr(w, r, fmt.Errorf("%w: %s", constants.ErrUnauthorized, constants.ErrIncorrectPassword))
 		return
 	}
 
